tests/NormalTests/paczka1/fuzzy1/25197039.err
Error in line 14: 72sEFdEADci A906 48,3
Error in line 8: ctTIGl A943 3,9
